--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "build": "rollup -c",
+    "lint": "eslint '**/*.{ts,tsx}'",
     "test": "jest",
     "test:dev": "jest --watch"
   },
@@ -28,12 +29,16 @@
     "url": "https://github.com/aurbano/typesafe-fetch/issues"
   },
   "homepage": "https://github.com/aurbano/typesafe-fetch#readme",
-  "dependencies": {
-    "with-query": "^1.3.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^27.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "esbuild": "^0.13.4",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.25.1",
+    "eslint-plugin-jest": "^25.0.5",
     "fetch-mock-jest": "^1.5.1",
     "jest": "^27.2.5",
     "node-fetch": "^3.0.0",
