--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "cross-fetch": "^3.1.4",
     "esbuild": "^0.13.4",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -41,6 +42,7 @@
     "eslint-plugin-jest": "^25.0.5",
     "fetch-mock-jest": "^1.5.1",
     "jest": "^27.2.5",
+    "msw": "^0.35.0",
     "node-fetch": "^3.0.0",
     "rollup": "^2.58.0",
     "rollup-plugin-dts": "^4.0.0",
